@@ -1,3 +1,7 @@
+2001-02-27  Alex Samuel  <samuel@codesourcery.com>
+
+	* qm/common.py (get_host_name): Add fallback logic.
+
 2001-02-26  Alex Samuel  <samuel@codesourcery.com>
 
 	* README: Clarify --test-values flag.
